--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -69,11 +69,13 @@
         android:layout_height="match_parent"
         android:gravity="center"
         android:orientation="vertical"
+        android:visibility="gone"
         app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior">
 
         <ImageView
             android:layout_width="100dp"
             android:layout_height="100dp"
+            android:id="@+id/errorImage"
             android:src="@drawable/ic_error_outline_black_24dp"
             android:layout_marginBottom="16dp" />
 
